# conan-propagate-options

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
.github/workflows/: ci.yml
libbar/: CMakeLists.txt  bar.cpp  bar.hpp  conanfile.py
libfoo/: CMakeLists.txt  conanfile.py  foo.cpp  foo.hpp
libfoo/include/: foo.hpp
libfoo/include/libfoo/: foo.hpp
libfoo/src/: foo.cpp
libwrapper/: CMakeLists.txt  conanfile.py
libwrapper/include/libwrapper/: wrapper.hpp
libwrapper/src/: wrapper.cpp
src/: main.cpp
